--- a/TaskMapper/package.json
+++ b/TaskMapper/package.json
@@ -11,6 +11,7 @@
     "react-count-down": "^1.0.1",
     "react-native": "^0.25.1",
     "react-native-countdown": "0.0.3",
+    "react-native-google-places-autocomplete": "^1.1.6",
     "tcomb-form-native": "^0.4.4"
   }
 }
